welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:6: error: ')' expected but ';' found.
setPos(biscuit; (orange+1)/2)
              ^RunHalf:6: error: ';' expected but ')' found.
setPos(biscuit; (orange+1)/2)
                            ^