welcome.lessons.welcome.variables.RunHalf.scala.code
override def run() {
	if (estSurBiscuit) {biscuit = biscuit+1}
	if (estSurOrange) {orange = orange+1}
}
setPos(biscuit; (orange+1)/2)
